# imgui_sl

./: .gitignore  CMakeLists.txt  vcpkg.json
lib/include/: allocator.hpp  gpu.hpp  graph.hpp  graph2.hpp  queue.hpp  queue_family.hpp  shader_layout.hpp  shader_manager.hpp  shader_object_layout.hpp  shader_print_buffer.hpp  typed_buffer.hpp  vulkan_core.hpp  vulkan_error.hpp
lib/include/algorithms/: dispatch.hpp  histogram.hpp  inclusive_scan.hpp  median_filter.hpp  normalise.hpp  types.hpp
lib/include/utility/: slot_map.hpp
lib/src/: allocator.cpp  graph.cpp  shader_manager.cpp  slang_helpers.hpp  vulkan_core.cpp
shaders/: CMakeLists.txt  compute_dispatcher.hpp  histogram.slang  inclusive_scan.slang  median_filter.slang  normalise.slang  pipeline_layout_builder.cpp  pipeline_layout_builder.hpp  printing.slang  span.slang  test.cpp
src/: allocator.cpp  detailed_exception.hpp  main.cpp  shader_manager.cpp  vulkan_core.cpp  vulkan_error.hpp
src/include/: detailed_exception.hpp  render_target.hpp  shader_manager.hpp  typed_buffer.hpp
src/include/algorithms/: dispatch.hpp  inclusive_scan.hpp
src/vk/: render_target.hpp  texture.cpp  texture.hpp  vma.cpp  vma.hpp  vma_context.cpp  vma_context.hpp  vulkan_app.hpp
test/: CMakeLists.txt  compute_dispatcher.hpp  test.cpp
